Lab_5.2 - SVR model without outcomes

--- a/Labs/Lab_5/Lab_5.2_SVM.ipynb
+++ b/Labs/Lab_5/Lab_5.2_SVM.ipynb
@@ -31,18 +31,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Primer Integrante:\n",
-    "#### Segundo Integrante:"
+    "#### Primer Integrante: Kevin Martínez Gallego\n",
+    "#### Segundo Integrante: Andrés Mauricio Álvarez Ortiz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import division\n",
     "import numpy as np\n",
+    "from numpy import round\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
     "#Algunas advertencias que queremos evitar\n",
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = DataBase[:,0:12]\n",
     "\n",
     "Y = DataBase[:,12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8991, 12)\n",
+      "(8991,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "print(Y.shape)"
    ]
   },
   {
@@ -173,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,40 +226,83 @@
     "from sklearn import preprocessing\n",
     "from sklearn.svm import SVR\n",
     "import time\n",
-    "tiempo_i = time.time()\n",
     "\n",
-    "#Complete el código para crear el modelo SVM para regresión. \n",
-    "#Use un kernel rbf con una malla de valores así: C en {0.1, 100} y gamma en {0.0001, 0.1}\n",
-    "#clf = ...\n",
+    "def execute_SVR(kernel, regParam, gamma):\n",
+    "    tiempo_i = time.time()\n",
     "\n",
-    "#Implemetamos la metodología de validación cross validation con 10 folds\n",
-    "Folds = 5\n",
-    "Errores = np.ones(Folds)\n",
-    "j = 0\n",
-    "kf = KFold(n_splits=Folds)\n",
+    "    #Implemetamos la metodología de validación cross validation con 5 folds\n",
+    "    Folds = 5\n",
+    "    Errores = np.ones(Folds)\n",
+    "    porcentajeVectores = np.zeros(Folds)\n",
+    "    j = 0\n",
+    "    kf = KFold(n_splits=Folds)\n",
     "\n",
-    "for train_index, test_index in kf.split(X):\n",
-    "    \n",
-    "    X_train, X_test = X[train_index], X[test_index]\n",
-    "    y_train, y_test = Y[train_index], Y[test_index]  \n",
-    "       \n",
-    "    #Complete el código\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # Entrenar el modelo\n",
-    "    #modelo = ...\n",
-    "    \n",
-    "    \n",
-    "    # Validación del modelo\n",
-    "    #ypred = ...\n",
-    " \n",
-    "    Errores[j] = MAPE(ypred, y_test)\n",
-    "    j+=1\n",
-    "    \n",
-    "print(\"\\nError de validación: \" + str(np.mean(Errores)) + \" +/- \" + str(np.std(Errores)))\n",
+    "    for train_index, test_index in kf.split(X):\n",
     "\n",
-    "print (\"\\n\\nTiempo total de ejecución: \" + str(time.time()-tiempo_i)) + \" segundos.\""
+    "        Xtrain, Xtest = X[train_index], X[test_index]\n",
+    "        Ytrain, Ytest = Y[train_index], Y[test_index]  \n",
+    "\n",
+    "        #Complete el código\n",
+    "                \n",
+    "        #Normalizamos los datos\n",
+    "        scaler = preprocessing.StandardScaler().fit(Xtrain)\n",
+    "        Xtrain = scaler.transform(Xtrain)\n",
+    "        Xtest = scaler.transform(Xtest)\n",
+    "\n",
+    "        # Entrenar el modelo\n",
+    "        if(kernel == 'rbf'):\n",
+    "            model = SVR(C=regParam, kernel='rbf', gamma=gamma).fit(Xtrain, Ytrain)\n",
+    "        else:\n",
+    "            model = SVR(C=regParam, kernel=kernel).fit(Xtrain, Ytrain)\n",
+    "\n",
+    "        porcentajeVectores[j] = np.sum(len(model.support_))/np.shape(Xtrain)[0]\n",
+    "            \n",
+    "        # Validación del modelo\n",
+    "        Y_pred = model.predict(Xtest)\n",
+    "\n",
+    "        Errores[j] = MAPE(Y_pred, Ytest)\n",
+    "        j+=1\n",
+    "\n",
+    "    error = round(np.mean(Errores),3)\n",
+    "    std_error = round(np.std(Errores),3)\n",
+    "    vectores_soporte = round(np.mean(porcentajeVectores),3)\n",
+    "    \n",
+    "    print(\"\\nError de validación: \" + str(error) + \" +/- \" + str(std_error) + \", % vectores de soporte: \" + str(vectores_soporte))\n",
+    "\n",
+    "    print (\"\\n\\nTiempo total de ejecución: \" + str(time.time()-tiempo_i) + \" segundos.\")\n",
+    "    \n",
+    "    return(str(error), str(std_error), str(vectores_soporte))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error de validación: 0.226 +/- 0.111, % vectores de soporte: 0.219\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 7.069697380065918 segundos.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('0.226', '0.111', '0.219')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "execute_SVR('rbf', 100, 1)"
    ]
   },
   {
@@ -253,24 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a93f3e54b1b24ca3874586ee0d90883e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "UWdyaWRXaWRnZXQoZ3JpZF9vcHRpb25zPXsnaGlnaGxpZ2h0U2VsZWN0ZWRSb3cnOiBUcnVlLCAnZnVsbFdpZHRoUm93cyc6IFRydWUsICdyb3dIZWlnaHQnOiAyOCwgJ2VuYWJsZUNvbHVtblLigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import qgrid\n",
@@ -282,10 +332,33 @@
     "df_types[\"Intervalo de confianza\"] = \"\"\n",
     "df_types[\"% de Vectores de Soporte\"] = \"\"\n",
     "df_types.set_index(['Kernel','C','gamma'], inplace=True)\n",
-    "df_types[\"MAPE Promedio\"][23] = \"0.2259\"\n",
-    "df_types[\"Intervalo de confianza\"][23] = \"0.1109\"\n",
-    "df_types[\"% de Vectores de Soporte\"][23] = \"0.2191\"\n",
+    "#df_types[\"MAPE Promedio\"][23] = \"0.2259\"\n",
+    "#df_types[\"Intervalo de confianza\"][23] = \"0.1109\"\n",
+    "#df_types[\"% de Vectores de Soporte\"][23] = \"0.2191\"\n",
     "#df_types.sort_index(inplace=True)\n",
+    "\n",
+    "index = 0\n",
+    "kernel = 'linear'\n",
+    "regParam = [0.001, 0.01, 0.1, 1, 10, 100]\n",
+    "gammaValues = [0.01, 0.1, 1]\n",
+    "\n",
+    "for i in range(np.size(regParam)):\n",
+    "    eff, std_eff, sv = execute_SVR(kernel, regParam[i], -1)\n",
+    "    df_types[\"MAPE Promedio\"][index] = eff\n",
+    "    df_types[\"Intervalo de confianza\"][index] = std_eff\n",
+    "    df_types[\"% de Vectores de Soporte\"][index] = sv\n",
+    "    index += 1\n",
+    "\n",
+    "kernel = 'rbf'\n",
+    "for i in range(np.size(regParam)):\n",
+    "    C = regParam[i]\n",
+    "    for j in range(np.size(gammaValues)):\n",
+    "        eff, std_eff, sv = execute_SVR(kernel, C, gammaValues[j])\n",
+    "        df_types[\"MAPE Promedio\"][index] = eff\n",
+    "        df_types[\"Intervalo de confianza\"][index] = std_eff\n",
+    "        df_types[\"% de Vectores de Soporte\"][index] = sv\n",
+    "        index += 1\n",
+    "\n",
     "qgrid_widget = qgrid.show_grid(df_types, show_toolbar=False)\n",
     "qgrid_widget"
    ]
@@ -299,269 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>MAPE Promedio</th>\n",
-       "      <th>Intervalo de confianza</th>\n",
-       "      <th>% de Vectores de Soporte</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kernel</th>\n",
-       "      <th>C</th>\n",
-       "      <th>gamma</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"6\" valign=\"top\">lineal</th>\n",
-       "      <th>0.001</th>\n",
-       "      <th>0.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.010</th>\n",
-       "      <th>0.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.100</th>\n",
-       "      <th>0.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.000</th>\n",
-       "      <th>0.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10.000</th>\n",
-       "      <th>0.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100.000</th>\n",
-       "      <th>0.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"18\" valign=\"top\">rbf</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">0.001</th>\n",
-       "      <th>0.01</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">0.010</th>\n",
-       "      <th>0.01</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">0.100</th>\n",
-       "      <th>0.01</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">1.000</th>\n",
-       "      <th>0.01</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">10.000</th>\n",
-       "      <th>0.01</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">100.000</th>\n",
-       "      <th>0.01</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.10</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td>0.2259</td>\n",
-       "      <td>0.1109</td>\n",
-       "      <td>0.2191</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     MAPE Promedio Intervalo de confianza  \\\n",
-       "Kernel C       gamma                                        \n",
-       "lineal 0.001   0.00                                         \n",
-       "       0.010   0.00                                         \n",
-       "       0.100   0.00                                         \n",
-       "       1.000   0.00                                         \n",
-       "       10.000  0.00                                         \n",
-       "       100.000 0.00                                         \n",
-       "rbf    0.001   0.01                                         \n",
-       "               0.10                                         \n",
-       "               1.00                                         \n",
-       "       0.010   0.01                                         \n",
-       "               0.10                                         \n",
-       "               1.00                                         \n",
-       "       0.100   0.01                                         \n",
-       "               0.10                                         \n",
-       "               1.00                                         \n",
-       "       1.000   0.01                                         \n",
-       "               0.10                                         \n",
-       "               1.00                                         \n",
-       "       10.000  0.01                                         \n",
-       "               0.10                                         \n",
-       "               1.00                                         \n",
-       "       100.000 0.01                                         \n",
-       "               0.10                                         \n",
-       "               1.00         0.2259                 0.1109   \n",
-       "\n",
-       "                     % de Vectores de Soporte  \n",
-       "Kernel C       gamma                           \n",
-       "lineal 0.001   0.00                            \n",
-       "       0.010   0.00                            \n",
-       "       0.100   0.00                            \n",
-       "       1.000   0.00                            \n",
-       "       10.000  0.00                            \n",
-       "       100.000 0.00                            \n",
-       "rbf    0.001   0.01                            \n",
-       "               0.10                            \n",
-       "               1.00                            \n",
-       "       0.010   0.01                            \n",
-       "               0.10                            \n",
-       "               1.00                            \n",
-       "       0.100   0.01                            \n",
-       "               0.10                            \n",
-       "               1.00                            \n",
-       "       1.000   0.01                            \n",
-       "               0.10                            \n",
-       "               1.00                            \n",
-       "       10.000  0.01                            \n",
-       "               0.10                            \n",
-       "               1.00                            \n",
-       "       100.000 0.01                            \n",
-       "               0.10                            \n",
-       "               1.00                    0.2191  "
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "qgrid_widget.get_changed_df()"
    ]
@@ -579,7 +392,7 @@
    "source": [
     "3.1 ¿Cuál es la finalidad de usar las funciones kernel en el modelo SVM?\n",
     "\n",
-    "R/:\n"
+    "R/: La idea de la función Kernel es mapear las muestras, que originalmente estan en un espacio d-dimensional, a un espacio de mayor dimensión en el cual aumenta la capacidad del modelo de realizar predicciones. Para un problema de clasificación, la función Kernel puede hacer posible que clases traslapadas en el espacio orginal sean linealmente separables en el nuevo espacio. Para un problema de regresión, la función Kernel puede permitir encontrar una curva más representativa de las muestras de entrenamiento."
    ]
   },
   {
@@ -588,7 +401,7 @@
    "source": [
     "3.2 ¿En este caso el porcentaje de vectores de soporte provee una información similar que en el problema de clasificación? Explique su respuesta.\n",
     "\n",
-    "R/:\n"
+    "R/: Si. Porque en regresión, los vectores de soporte son las muestras que están fuera del epsilon-tubo o justo en el limite; es decir, las muestras que son \"difíciles\" de ajustar a la curva. En clasificación, los vectores de soporte son las muestras que están dentro del margen o justo en el límite; es decir, las muestras que son \"difíciles\" de clasificar.\n"
    ]
   },
   {
@@ -624,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
