--- a/Labs/Lab_5/Lab_5.2_SVM.ipynb
+++ b/Labs/Lab_5/Lab_5.2_SVM.ipynb
@@ -287,7 +287,7 @@
       "Error de validación: 0.226 +/- 0.111, % vectores de soporte: 0.219\n",
       "\n",
       "\n",
-      "Tiempo total de ejecución: 7.069697380065918 segundos.\n"
+      "Tiempo total de ejecución: 47.7696008682251 segundos.\n"
      ]
     },
     {
@@ -316,11 +316,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error de validación: 0.215 +/- 0.065, % vectores de soporte: 0.379\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 16.34675669670105 segundos.\n",
+      "\n",
+      "Error de validación: 0.245 +/- 0.096, % vectores de soporte: 0.377\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 12.361960887908936 segundos.\n",
+      "\n",
+      "Error de validación: 0.277 +/- 0.135, % vectores de soporte: 0.385\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 27.428181886672974 segundos.\n",
+      "\n",
+      "Error de validación: 0.287 +/- 0.151, % vectores de soporte: 0.386\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 132.8582968711853 segundos.\n",
+      "\n",
+      "Error de validación: 0.287 +/- 0.15, % vectores de soporte: 0.386\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 575.6068267822266 segundos.\n",
+      "\n",
+      "Error de validación: 0.289 +/- 0.153, % vectores de soporte: 0.386\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 2931.2996480464935 segundos.\n",
+      "\n",
+      "Error de validación: 0.401 +/- 0.206, % vectores de soporte: 0.747\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 10.906141996383667 segundos.\n",
+      "\n",
+      "Error de validación: 0.329 +/- 0.14, % vectores de soporte: 0.643\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 9.030409812927246 segundos.\n",
+      "\n",
+      "Error de validación: 0.491 +/- 0.286, % vectores de soporte: 0.769\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 11.126045942306519 segundos.\n",
+      "\n",
+      "Error de validación: 0.183 +/- 0.038, % vectores de soporte: 0.443\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 6.549493074417114 segundos.\n",
+      "\n",
+      "Error de validación: 0.179 +/- 0.051, % vectores de soporte: 0.278\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 4.087890863418579 segundos.\n",
+      "\n",
+      "Error de validación: 0.391 +/- 0.234, % vectores de soporte: 0.562\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 8.48944878578186 segundos.\n",
+      "\n",
+      "Error de validación: 0.147 +/- 0.038, % vectores de soporte: 0.19\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 2.9942610263824463 segundos.\n",
+      "\n",
+      "Error de validación: 0.15 +/- 0.054, % vectores de soporte: 0.152\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 2.7599611282348633 segundos.\n",
+      "\n",
+      "Error de validación: 0.269 +/- 0.15, % vectores de soporte: 0.269\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 4.988033056259155 segundos.\n",
+      "\n",
+      "Error de validación: 0.204 +/- 0.187, % vectores de soporte: 0.122\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 2.4811649322509766 segundos.\n",
+      "\n",
+      "Error de validación: 0.192 +/- 0.14, % vectores de soporte: 0.166\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 3.659532070159912 segundos.\n",
+      "\n",
+      "Error de validación: 0.238 +/- 0.13, % vectores de soporte: 0.217\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 5.009355068206787 segundos.\n",
+      "\n",
+      "Error de validación: 0.559 +/- 0.912, % vectores de soporte: 0.164\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 5.031160116195679 segundos.\n",
+      "\n",
+      "Error de validación: 0.18 +/- 0.171, % vectores de soporte: 0.104\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 5.63857889175415 segundos.\n",
+      "\n",
+      "Error de validación: 0.223 +/- 0.108, % vectores de soporte: 0.213\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 5.639779806137085 segundos.\n",
+      "\n",
+      "Error de validación: 0.69 +/- 1.21, % vectores de soporte: 0.102\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 13.043868064880371 segundos.\n",
+      "\n",
+      "Error de validación: 0.214 +/- 0.204, % vectores de soporte: 0.105\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 17.3032169342041 segundos.\n",
+      "\n",
+      "Error de validación: 0.226 +/- 0.111, % vectores de soporte: 0.219\n",
+      "\n",
+      "\n",
+      "Tiempo total de ejecución: 7.273940086364746 segundos.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/qgrid/grid.py:827: DeprecationWarning: QgridWidget._df_changed is deprecated in traitlets 4.1: use @observe and @unobserve instead.\n",
+      "  def _df_changed(self):\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d268cecc117a4c1fabdee5784ba8cf17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "QgridWidget(grid_options={'fullWidthRows': True, 'syncColumnCellResize': True, 'forceFitColumns': True, 'defau…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import qgrid\n",
@@ -372,9 +521,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>MAPE Promedio</th>\n",
+       "      <th>Intervalo de confianza</th>\n",
+       "      <th>% de Vectores de Soporte</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kernel</th>\n",
+       "      <th>C</th>\n",
+       "      <th>gamma</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">lineal</th>\n",
+       "      <th>0.001</th>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.215</td>\n",
+       "      <td>0.065</td>\n",
+       "      <td>0.379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.010</th>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.245</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>0.377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.100</th>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.277</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.000</th>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.287</td>\n",
+       "      <td>0.151</td>\n",
+       "      <td>0.386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10.000</th>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.287</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100.000</th>\n",
+       "      <th>0.00</th>\n",
+       "      <td>0.289</td>\n",
+       "      <td>0.153</td>\n",
+       "      <td>0.386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"18\" valign=\"top\">rbf</th>\n",
+       "      <th rowspan=\"3\" valign=\"top\">0.001</th>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.401</td>\n",
+       "      <td>0.206</td>\n",
+       "      <td>0.747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.329</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.491</td>\n",
+       "      <td>0.286</td>\n",
+       "      <td>0.769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">0.010</th>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.183</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.179</td>\n",
+       "      <td>0.051</td>\n",
+       "      <td>0.278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.391</td>\n",
+       "      <td>0.234</td>\n",
+       "      <td>0.562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">0.100</th>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.147</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.054</td>\n",
+       "      <td>0.152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.269</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">1.000</th>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.204</td>\n",
+       "      <td>0.187</td>\n",
+       "      <td>0.122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.192</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.238</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">10.000</th>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.559</td>\n",
+       "      <td>0.912</td>\n",
+       "      <td>0.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.171</td>\n",
+       "      <td>0.104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.223</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>0.213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">100.000</th>\n",
+       "      <th>0.01</th>\n",
+       "      <td>0.69</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>0.102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.214</td>\n",
+       "      <td>0.204</td>\n",
+       "      <td>0.105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.00</th>\n",
+       "      <td>0.226</td>\n",
+       "      <td>0.111</td>\n",
+       "      <td>0.219</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     MAPE Promedio Intervalo de confianza  \\\n",
+       "Kernel C       gamma                                        \n",
+       "lineal 0.001   0.00          0.215                  0.065   \n",
+       "       0.010   0.00          0.245                  0.096   \n",
+       "       0.100   0.00          0.277                  0.135   \n",
+       "       1.000   0.00          0.287                  0.151   \n",
+       "       10.000  0.00          0.287                   0.15   \n",
+       "       100.000 0.00          0.289                  0.153   \n",
+       "rbf    0.001   0.01          0.401                  0.206   \n",
+       "               0.10          0.329                   0.14   \n",
+       "               1.00          0.491                  0.286   \n",
+       "       0.010   0.01          0.183                  0.038   \n",
+       "               0.10          0.179                  0.051   \n",
+       "               1.00          0.391                  0.234   \n",
+       "       0.100   0.01          0.147                  0.038   \n",
+       "               0.10           0.15                  0.054   \n",
+       "               1.00          0.269                   0.15   \n",
+       "       1.000   0.01          0.204                  0.187   \n",
+       "               0.10          0.192                   0.14   \n",
+       "               1.00          0.238                   0.13   \n",
+       "       10.000  0.01          0.559                  0.912   \n",
+       "               0.10           0.18                  0.171   \n",
+       "               1.00          0.223                  0.108   \n",
+       "       100.000 0.01           0.69                   1.21   \n",
+       "               0.10          0.214                  0.204   \n",
+       "               1.00          0.226                  0.111   \n",
+       "\n",
+       "                     % de Vectores de Soporte  \n",
+       "Kernel C       gamma                           \n",
+       "lineal 0.001   0.00                     0.379  \n",
+       "       0.010   0.00                     0.377  \n",
+       "       0.100   0.00                     0.385  \n",
+       "       1.000   0.00                     0.386  \n",
+       "       10.000  0.00                     0.386  \n",
+       "       100.000 0.00                     0.386  \n",
+       "rbf    0.001   0.01                     0.747  \n",
+       "               0.10                     0.643  \n",
+       "               1.00                     0.769  \n",
+       "       0.010   0.01                     0.443  \n",
+       "               0.10                     0.278  \n",
+       "               1.00                     0.562  \n",
+       "       0.100   0.01                      0.19  \n",
+       "               0.10                     0.152  \n",
+       "               1.00                     0.269  \n",
+       "       1.000   0.01                     0.122  \n",
+       "               0.10                     0.166  \n",
+       "               1.00                     0.217  \n",
+       "       10.000  0.01                     0.164  \n",
+       "               0.10                     0.104  \n",
+       "               1.00                     0.213  \n",
+       "       100.000 0.01                     0.102  \n",
+       "               0.10                     0.105  \n",
+       "               1.00                     0.219  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "qgrid_widget.get_changed_df()"
    ]
